--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "dexie": "^3.2.2",
     "papaparse": "^5.3.2",
     "sass": "^1.55.0",
     "svelte-preprocess": "^4.10.7",
