--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "dexie": "^3.2.2",
+    "osc-js": "^2.4.0",
     "papaparse": "^5.3.2",
     "sass": "^1.55.0",
     "svelte-preprocess": "^4.10.7",
