--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "dexie": "^3.2.2",
     "osc-js": "^2.4.0",
+    "paho-mqtt": "^1.1.0",
     "papaparse": "^5.3.2",
     "sass": "^1.55.0",
     "svelte-preprocess": "^4.10.7",
