--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "miq",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.2",
-    "svelte": "^3.49.0",
-    "vite": "^3.1.0",
-    "vite-plugin-pwa": "^0.13.2"
-  },
-  "dependencies": {
-    "dexie": "^3.2.2",
-    "osc-js": "^2.4.0",
-    "paho-mqtt": "^1.1.0",
-    "papaparse": "^5.3.2",
-    "sass": "^1.55.0",
-    "svelte-preprocess": "^4.10.7",
-    "webmidi": "^3.0.21"
-  }
+	"name": "miq",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"@babel/plugin-syntax-bigint": "^7.8.3",
+		"@sveltejs/vite-plugin-svelte": "^2.4.2",
+		"svelte": "^4.0.3",
+		"terser": "^5.19.0",
+		"vite": "^4.4.0",
+		"vite-plugin-pwa": "^0.16.4"
+	},
+	"dependencies": {
+		"@vitejs/plugin-legacy": "^4.1.0",
+		"dexie": "^3.2.4",
+		"osc-js": "^2.4.0",
+		"paho-mqtt": "^1.1.0",
+		"papaparse": "^5.4.1",
+		"sass": "^1.63.0",
+		"svelte-preprocess": "^5.0.4"
+	}
 }
