--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@vitejs/plugin-legacy": "^4.1.0",
+		"boxicons": "^2.1.4",
 		"dexie": "^3.2.4",
 		"osc-js": "^2.4.0",
 		"paho-mqtt": "^1.1.0",
