--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@vitejs/plugin-legacy": "^4.1.0",
 		"boxicons": "^2.1.4",
 		"dexie": "^3.2.4",
+		"dialog-polyfill": "^0.5.6",
 		"osc-js": "^2.4.0",
 		"paho-mqtt": "^1.1.0",
 		"papaparse": "^5.4.1",
