--- a/jsconfig.json
+++ b/jsconfig.json
@@ -24,7 +24,9 @@
 		 * Typecheck JS in `.svelte` and `.js` files by default.
 		 * Disable this if you'd like to use dynamic types.
 		 */
-		"checkJs": false
+		"checkJs": false,
+
+		"strictNullChecks": true
 	},
 	/**
 	 * Use global.d.ts instead of compilerOptions.types
